@@ -1,3 +1,9 @@
+2006-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Support for merged ttk widgets in Tk 8.5a6. Should
+	handle 8.4, 8.4+tile 0.7 and 8.5a6 now. Some widget packing bugs
+	squashed too.
+
 2006-10-19  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Fix retrieving history when proxy disabled.
